# AlloyGBM

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  publish.yml  security-audit.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md
benchmarks/: README.md  dro_robustness.py  metal_histogram.py  morph_ablation.py  morph_report.py  numerai_benchmark.py  objective_benchmark.py  perf_at_scale.py  pl_trees_benchmark.py  run_model_comparison.py
benchmarks/abalone_regression/: manifest.yaml  prepare.py
benchmarks/adult_income/: manifest.yaml  prepare.py
benchmarks/architectural_backlog/: __init__.py  common.py  fixtures.py  run.py  scenarios.py
benchmarks/bike_sharing/: manifest.yaml  prepare.py
benchmarks/breast_cancer/: manifest.yaml  prepare.py
benchmarks/california_housing/: manifest.yaml  prepare.py
benchmarks/california_ranking/: manifest.yaml  prepare.py
benchmarks/dense_numeric/: manifest.yaml  prepare.py
benchmarks/digits_multiclass/: manifest.yaml  prepare.py
benchmarks/dow_jones_financial/: manifest.yaml  prepare.py
benchmarks/histogram_stress/: manifest.yaml  prepare.py
benchmarks/news_ranking/: manifest.yaml  prepare.py
benchmarks/panel_time_series/: manifest.yaml  prepare.py
benchmarks/results/: perf_final_summary.txt  perf_phase_b.txt  perf_phase_b_comparison.txt  perf_phase_b_final.txt
benchmarks/synthetic_ranking/: prepare.py  (+1 more)
bindings/python/: Cargo.toml
bindings/python/alloygbm/: __init__.py  _morph.py  classifier.py  evaluation.py  multi_label_ranker.py  ranker.py  regressor.py  validation.py
bindings/python/alloygbm/_regressor/: __init__.py  _base.py  _core.py  _persistence.py  _quantization.py  _shap.py  _validation.py
bindings/python/alloygbm/lib_alloygbm.dylib.dSYM/Contents/: Info.plist
bindings/python/src/: callbacks.rs  categorical_bridge.rs  errors.rs  joint.rs  lib.rs  params.rs  predict.rs  pyclasses.rs  quantization.rs  runtime_backend.rs  shap_bridge.rs  train.rs
bindings/python/src/tests/: main.rs
bindings/python/tests/: test_classifier_and_metrics.py  test_configurability.py  test_custom_metric.py  test_custom_objective.py  test_dart.py  test_dart_warm_start.py  test_dro_leaf_solver.py  test_evaluation_metrics.py  test_factor_neutralization.py  test_feature_bundling.py  test_gil_release.py  test_glm_objectives.py  test_goss.py  test_integration.py  test_interaction_constraints.py  test_joint_multilabel.py  test_leaf_wise_growth.py  test_metal_backend.py  test_module_identity.py  test_morph.py  test_morph_helpers.py  test_multi_categorical.py  test_multi_label_ranker.py  test_multiclass.py  test_multiclass_dart.py  test_multiclass_goss.py  test_native_categorical_splits.py  test_native_runtime_integration.py  test_pl_trees.py  test_quantile_objective.py  test_quantile_sketches.py  test_rank_binning_nan.py  test_ranker.py  test_ranker_glm_quantile.py  test_regressor_contract.py  test_shap_additivity_tolerance.py  test_shap_interactions.py  test_shap_linear_rank_strict_additivity.py  test_shap_multiclass_multioutput.py  test_shap_pl_strict_additivity.py  (+5 more)
crates/backend_cpu/: Cargo.toml
crates/backend_cpu/benches/: histogram_kernels.rs
crates/backend_cpu/src/: arena.rs  backend_ops.rs  factor_split.rs  lib.rs  morph.rs  pl.rs  pl_histogram.rs  shared_histogram.rs  split_helpers.rs
crates/backend_cpu/src/tests/: main.rs
crates/backend_cpu/tests/: backend_ops_batch_defaults.rs  find_best_splits_batch_default.rs  level_wise_three_phase_smoke.rs
crates/backend_metal/: Cargo.toml
crates/backend_metal/src/: budget.rs  buffers.rs  device.rs  histogram_residency.rs  icb_buffer_pool.rs  lib.rs  pipelines.rs  profile.rs  residency.rs  row_index_residency.rs  split_decision_residency.rs
crates/backend_metal/src/kernels/: best_split.rs  histogram.rs  icb_tree.rs  mod.rs  partition.rs  split.rs  subtract.rs
crates/backend_metal/src/shaders/: best_split.metal  histogram.metal  icb_tree.metal  partition.metal  split.metal  subtract.metal
crates/backend_metal/tests/: best_split_parity.rs  icb_tree_parity.rs
crates/categorical/: Cargo.toml
crates/categorical/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: artifact_format.rs  binned.rs  config.rs  dataset.rs  dro.rs  error.rs  feature_bundling.rs  histogram.rs  leaf.rs  lib.rs  linear_histogram.rs  neutralization.rs  simd.rs  training_mode.rs  validation.rs
crates/core/src/tests/: main.rs
crates/engine/: Cargo.toml
crates/engine/examples/: sparse_predictor_fixture.rs
crates/engine/src/: artifact.rs  dart.rs  env.rs  error.rs  factor.rs  joint.rs  leaf_refinement.rs  lib.rs  loss.rs  morph_state.rs  multiclass_model.rs  round.rs  sampling.rs  shared_histogram.rs  split_options.rs  tiling.rs  trained_model.rs  traits.rs  tree_node.rs  types.rs  warm_start.rs
crates/engine/src/joint/: build_round.rs  fit.rs  helpers.rs  mod.rs  tests.rs  types.rs
crates/engine/src/objectives/: binary.rs  glm.rs  mod.rs  multiclass.rs  quantile.rs  ranking.rs  squared.rs
crates/engine/src/tests/: main.rs  mod.rs  morph_state.rs
crates/engine/src/trainer/: interaction.rs  mod.rs  policy.rs  tree_build.rs  validate.rs
crates/predictor/: Cargo.toml
crates/predictor/src/: lib.rs
crates/shap/: Cargo.toml
crates/shap/src/: binning.rs  brute_force.rs  error.rs  importance.rs  lib.rs  linear_leaf.rs  tree_shap.rs  types.rs
crates/shap/src/tests/: main.rs
docs/: README.md  limitations.md
examples/: 01_regression_basics.py  02_binary_classification.py  03_ranking_with_groups.py  04_multi_label_ranking.py  05_factor_neutral_boosting.py  06_interaction_constraints.py  07_warm_start_continuation.py  08_shap_explanations.py  README.md
scripts/: benchmark_avx2_compare.sh  diagnose_ranker.py  triage_pl_shap_additivity.py
(+492 files in other folders)
