[workspace]
members = [
    "crates/core",
    "crates/engine",
    "crates/backend_cpu",
    "crates/predictor",
    "crates/shap",
    "crates/categorical",
    "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"
