[workspace]
members = [
    "crates/core",
    "crates/engine",
    "crates/backend_cpu",
    "crates/predictor",
    "crates/shap",
    "crates/categorical",
    "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2024"
license = "MIT"
rust-version = "1.92.0"
homepage = "https://github.com/LGA-Personal/AlloyGBM"
repository = "https://github.com/LGA-Personal/AlloyGBM"
documentation = "https://alloygbm.readthedocs.io/en/latest/"

[workspace.lints.rust]
unsafe_code = "forbid"
