[package]
name = "alloygbm-python"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_alloygbm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py310"] }
alloygbm-backend-cpu = { path = "../../crates/backend_cpu" }
alloygbm-categorical = { path = "../../crates/categorical" }
alloygbm-core = { path = "../../crates/core" }
alloygbm-engine = { path = "../../crates/engine" }
alloygbm-predictor = { path = "../../crates/predictor" }

[package.metadata.maturin]
python-source = "."
module-name = "alloygbm._alloygbm"

[lints]
workspace = true
