[package]
name = "alloygbm-python"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Python extension bindings for AlloyGBM"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[lib]
name = "_alloygbm"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py311"] }
numpy = "0.29"
rayon = "1.11"
alloygbm-backend-cpu = { path = "../../crates/backend_cpu" }
alloygbm-categorical = { path = "../../crates/categorical" }
alloygbm-core = { path = "../../crates/core" }
alloygbm-engine = { path = "../../crates/engine" }
alloygbm-predictor = { path = "../../crates/predictor" }
alloygbm-shap = { path = "../../crates/shap" }

[package.metadata.maturin]
python-source = "."
module-name = "alloygbm._alloygbm"

[lints]
workspace = true
