[package]
name = "alloygbm-backend-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloygbm-core = { path = "../core" }
alloygbm-engine = { path = "../engine" }

[[bench]]
name = "histogram_kernels"
harness = false

[lints]
workspace = true
