[package]
name = "alloygbm-backend-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CPU histogram backend and split evaluation kernels for AlloyGBM"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[dependencies]
alloygbm-core = { path = "../core" }
alloygbm-engine = { path = "../engine" }
rayon = "1.12"
wide = "0.7"

[[bench]]
name = "histogram_kernels"
harness = false

[lints]
workspace = true
