[package]
name = "alloygbm-backend-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Metal GPU backend for AlloyGBM on Apple Silicon"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
alloygbm-core = { path = "../core" }
alloygbm-engine = { path = "../engine" }
alloygbm-backend-cpu = { path = "../backend_cpu" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-metal = { version = "0.3", features = [
    "MTLIndirectCommandBuffer",
    "MTLHeap",
] }

# Workspace lints set `unsafe_code = "forbid"`. This crate is the sole
# exception — see `docs/metal-backend/DECISIONS.md` D-007. We drop the
# workspace inheritance and declare a local `deny` so FFI call sites opt
# in per-site with `#[allow(unsafe_code)]`.
[lints.rust]
unsafe_code = "deny"
