[package]
name = "alloygbm-categorical"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Categorical feature helpers for AlloyGBM"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[dependencies]
alloygbm-core = { path = "../core" }

[lints]
workspace = true
