[package]
name = "alloygbm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core data contracts and artifact structures for AlloyGBM"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[lints]
workspace = true
