[package]
name = "alloygbm-predictor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloygbm-core = { path = "../core" }
rayon = "1.11"

[dev-dependencies]
alloygbm-backend-cpu = { path = "../backend_cpu" }
alloygbm-engine = { path = "../engine" }

[lints]
workspace = true
