[package]
name = "alloygbm-shap"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SHAP explanation support for AlloyGBM"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[dependencies]
alloygbm-core = { path = "../core" }
alloygbm-engine = { path = "../engine" }

[dev-dependencies]
alloygbm-predictor = { path = "../predictor" }

[lints]
workspace = true
